another stab at fixing vertical spacing of social links

--- a/css/main.css
+++ b/css/main.css
@@ -2746,19 +2746,19 @@
 
 	#footer {
 		min-height: 100vh;
-		padding: 0 0 12em 0;
+		padding: 0 0 2em 0;
 		position: relative;
 		text-align: center;
 	}
 
 		#footer .container {
-			padding: 5em 2.5em 3em 2.5em ;
+			padding: 5em 2.5em 1em 2.5em ;
 			background: rgba(255, 255, 255, 0.95);
 			box-shadow: inset 0 1px 0 0 #dddddd;
 		}
 
 		#footer .container-icons {
-			padding: 7em 2.5em 3em 2.5em ;
+			padding: 1em 2.5em 3em 2.5em ;
 			background: transparent;
 			box-shadow: none;
 		}
@@ -2802,6 +2802,7 @@
 						margin-left: 0;
 						padding-left: 0;
 					}
+
 
 /* Large */
 
